feat: Add the dislike endpoint, change the bearer token auth to an API key auth which makes more sense on this app, also removed ip checking when liking a post
